<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_round_white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:src="@drawable/payment_complete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/txt_add_to_cart"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/yes"
                android:layout_width="0dp"
                android:layout_height="40sp"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/rounded_corners_button_accent"
                android:text="@string/txt_yes"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/checkout"
                android:layout_width="0dp"
                android:layout_height="40sp"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/rounded_corners_button_accent"
                android:text="@string/checkout"
                android:textColor="@color/white"
               />


        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>