<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/cart_view_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/empty_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_cart"
            android:textSize="18sp"
            android:textColor="@color/textColorSecondaryLight"
            android:layout_gravity="center_horizontal" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/continue_shopping_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/explore"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/button_margin"
            app:backgroundTint="@color/colorAccentGreen"
            android:background="@drawable/rounded_corners_button_green"

            />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/cart_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/cart_items_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:layout_margin="5dp" />

        <LinearLayout
            android:id="@+id/cart_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white" >

            <RelativeLayout
                android:id="@+id/bottomPart_myCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:gravity="start"
                    android:padding="5dp"
                    android:orientation="vertical">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:gravity="start"
        android:text="@string/total_items"
        android:textAlignment="viewStart"
        android:textColor="@color/textColorSecondary"
        android:textSize="14sp"
        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/total_items"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:gravity="start"
                        android:text="(2)"
                        android:textAlignment="viewStart"
                        android:textColor="@color/textColorSecondary"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                    <TextView
                        android:id="@+id/cart_total_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="16.0000 JOD"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorAccentGreen"
                        android:textSize="21sp"
                        android:textStyle="bold" />

                </LinearLayout>


                <!--invisible because of making it live-->
                <Button
                    android:id="@+id/cart_checkout_btn"
                    android:layout_width="168dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:text="@string/checkout"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="visible"
                    android:background="@drawable/rounded_corners_button_accent"
                    />

            </RelativeLayout>

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_weight=".5"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@color/colorAccent"
                    android:padding="5dp" >

                    <TextView
                        android:id="@+id/cart_total_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Total $0.00"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textAlignment="textStart"
                        android:gravity="start"
                        android:padding="5dp" />

                </LinearLayout>

                <Button
                    android:id="@+id/cart_checkout_btn"
                    android:layout_weight=".5"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:text="@string/checkout"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:background="@color/colorPrimary" />

            </LinearLayout>-->

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
